...
        title = "Catalog"
        
        tableView.delegate = self
        tableView.dataSource = self

        tableView.isAccessibilityElement = true
        tableView.accessibilityIdentifier = "CatalogTable"

        tableView.register(
            CatalogTableViewCell.self,
            forCellReuseIdentifier: "CatalogCell"
        )
        tableView.rowHeight = 70
...
